--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "eslint-plugin-cypress": "2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jasmine": "4.1.2",
+    "eslint-plugin-jest-dom": "^3.8.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "3.4.0",
@@ -163,6 +164,7 @@
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-standard": "5.0.0",
+    "eslint-plugin-testing-library": "^4.1.2",
     "fork-ts-checker-webpack-plugin": "^6.2.4",
     "html-webpack-plugin": "^5.3.1",
     "husky": "6.0.0",
