--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "esModuleInterop": true,
     "downlevelIteration": true,
     "suppressImplicitAnyIndexErrors": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["esnext", "DOM", "DOM.Iterable"],
     "typeRoots": [
       "src/typings",
       "node_modules/@types"
