--- a/package.json
+++ b/package.json
@@ -192,6 +192,7 @@
     "webpack": "^5.38.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.0",
+    "webpack-deadcode-plugin": "^0.1.13",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "^5.7.3",
     "workbox-webpack-plugin": "^6.1.5"
