--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@amsterdam/arm-draw": "^0.6.0",
     "@amsterdam/arm-nontiled": "^0.6.0",
     "@amsterdam/asc-assets": "^0.29.2",
-    "@amsterdam/asc-ui": "^0.29.3",
+    "@amsterdam/asc-ui": "^0.29.4-alpha.44",
     "@amsterdam/react-maps": "^0.12.0",
     "@amsterdam/use-promise": "^2.1.0",
     "@babel/runtime-corejs3": "^7.14.0",
