--- a/nginx.csp.dev.conf
+++ b/nginx.csp.dev.conf
@@ -4,6 +4,6 @@ add_header Content-Security-Policy
   font-src 'self' https://static.amsterdam.nl fast.fonts.net;
   frame-src 'self' data: localhost:8080 blob: https://*.amsterdam.nl https://ois-amsterdam.gitlab.io https://vimeo.com https://*.vimeo.com;
   media-src 'self' https://*.data.amsterdam.nl https://*.vimeo.com;
-  img-src 'self' blob: https://data.amsterdam.nl https://*.data.amsterdam.nl data: https://*.amsterdam.nl https://geodata.nationaalgeoregister.nl localhost;
-  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.data.amsterdam.nl https://static.amsterdam.nl;
+  img-src 'self' blob: https://data.amsterdam.nl https://*.data.amsterdam.nl data: https://*.amsterdam.nl https://geodata.nationaalgeoregister.nl https://*.cloudfront.net localhost;
+  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.data.amsterdam.nl https://static.amsterdam.nl https://w.usabilla.com;
   style-src 'self' 'unsafe-inline' 'unsafe-eval' https://static.amsterdam.nl fast.fonts.net;";
