--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,9 @@ updates:
   schedule:
     interval: weekly
   ignore:
+  - dependency-name: d3
+    versions:
+    - ">= 0"
   - dependency-name: leaflet-draw
     versions:
     - ">= 0"
