--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@jest/types": "^27.0.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
@@ -158,6 +159,7 @@
     "postcss": "^8.3.0",
     "postcss-loader": "^5.3.0",
     "prettier": "2.3.1",
+    "react-refresh": "^0.9.0",
     "react-test-renderer": "17.0.2",
     "rimraf": "3.0.2",
     "sass": "^1.34.1",
