--- a/package.json
+++ b/package.json
@@ -139,9 +139,9 @@
     "identity-obj-proxy": "3.0.0",
     "isomorphic-fetch": "3.0.0",
     "jasmine-core": "3.7.1",
-    "jest": "26.6.3",
+    "jest": "^27.0.5",
     "jest-canvas-mock": "^2.3.1",
-    "jest-environment-jsdom": "26.6.2",
+    "jest-environment-jsdom": "^27.0.5",
     "jest-environment-jsdom-global": "2.0.4",
     "jest-environment-node": "27.0.5",
     "jest-localstorage-mock": "^2.4.14",
@@ -160,7 +160,7 @@
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
-    "ts-jest": "^26.5.6",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4",
     "webpack": "^5.40.0",
