--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean:dirs": "rimraf ./node_modules ./coverage ./coverage-legacy ./dist ./build",
     "deploy:demo": "./scripts/deploy-demo.sh",
     "generate:sitemap": "node ./sitemap-generator/index.js",
+    "generate:graphql-types": "graphql-codegen --config ./codegen.yml -r dotenv/config",
     "lint": "eslint ./ --ext ts,tsx",
     "start": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.dev.ts",
     "start:prod": "cross-env TS_NODE_PROJECT=tsconfig.webpack.json webpack serve --config webpack.prod.ts",
@@ -23,8 +24,8 @@
     "@amsterdam/arm-core": "^0.6.0",
     "@amsterdam/arm-draw": "^0.6.0",
     "@amsterdam/arm-nontiled": "^0.6.0",
-    "@amsterdam/asc-assets": "^0.30.0",
-    "@amsterdam/asc-ui": "^0.30.0",
+    "@amsterdam/asc-assets": "^0.30.1-alpha.20",
+    "@amsterdam/asc-ui": "^0.30.1-alpha.20",
     "@amsterdam/react-maps": "^0.12.0",
     "@amsterdam/use-promise": "^2.1.0",
     "@babel/runtime-corejs3": "^7.14.7",
@@ -67,6 +68,10 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@graphql-codegen/add": "^2.0.2",
+    "@graphql-codegen/cli": "^1.21.6",
+    "@graphql-codegen/typescript": "^1.22.4",
+    "@graphql-codegen/typescript-resolvers": "^1.19.5",
     "@jest/types": "^27.0.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@svgr/webpack": "^5.5.0",
@@ -116,6 +121,7 @@
     "css-loader": "^5.2.6",
     "cssnano": "^5.0.6",
     "cypress": "^7.6.0",
+    "dotenv-webpack": "^7.0.3",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "8.3.0",
